# wordle-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mathler.cpp  wordle.cpp
